--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: resolve platform specific vars
-  include_vars: '{{ item }}'
+- name: Resolve platform specific vars
+  ansible.builtin.include_vars: '{{ item }}'
   with_first_found:
     - files:
         - '{{ ansible_distribution }}-{{ ansible_distribution_release }}.yml'
@@ -9,18 +9,18 @@
       skip: true
       paths:
         - '{{ role_path }}/vars'
-- name: downloading {{ yq_url }} to {{ yq_install_exe }}
+- name: Downloading {{ yq_url }} to {{ yq_install_exe }}
   become: '{{ yq_privilege_escalate }}'
   become_user: root
-  get_url:
+  ansible.builtin.get_url:
     url: '{{ yq_url }}'
     dest: '{{ yq_install_exe }}'
     checksum: '{{ yq_checksum }}'
-    mode: 0755
-- name: linking {{ yq_link }} to {{ yq_install_exe }}
+    mode: '755'
+- name: Linking {{ yq_link }} to {{ yq_install_exe }}
   become: '{{ yq_privilege_escalate }}'
   become_user: root
-  file:
+  ansible.builtin.file:
     src: '{{ yq_install_exe }}'
     dest: '{{ yq_link }}'
     state: link
