--- a/test.yml
+++ b/test.yml
@@ -1,10 +1,13 @@
 ---
-- hosts: all
+- name: Testing andrewrothstein.yq
+  hosts: all
   roles:
     - role: '{{ playbook_dir }}'
   tasks:
-    - command: /usr/local/bin/yq --version
+    - name: Executing 'yq --verison'
+      ansible.builtin.command: /usr/local/bin/yq --version
+      changed_when: false
       register: yq_test_output
-    - name: yq --version
-      debug:
+    - name: Output of 'yq --version'
+      ansible.builtin.debug:
         msg: '{{ yq_test_output.stdout }}'
